[metadata]
name = example-pkg-fredyeah
version = 0.0.1
author = Frederic
author_email = mark.s@catalyst-students.com
description = An experimental, modular, audio programming environment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fredyeah/py-modular
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = py_modular
packages = find:
python_requires = >=3.7

[options.packages.find]
where = py_modular
